# slag

./: MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  slag.py
html/: base.html  list.html
slag/: __init__.py  __main__.py
slag/css/: main.css  pygments.css
slag/html/: base.html  file.html  list.html  single.html
