[tool.poetry]
name = "slag"
version = "0.4.0"
description = "A distributed micro-blog social network on the blockchain."
authors = ["John Weachock <jweachock@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/scizzorz/slag"

[tool.poetry.scripts]
slag = 'slag:render_all'

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^19.1"
click = "^7.0"
Jinja2 = "^2.10.1"
Markdown = "^3.1"
Pygments = "^2.4"
toml = "^0.10.0"
pygit2 = "0.27.4"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
